--- a/index.html
+++ b/index.html
@@ -2,14 +2,32 @@
 <html>
   <head>
     <title>versapunk.github.io</title>
+    <style>
+      li,
+      p {
+        color: rgb(7, 7, 7);
+        line-height: 28px;
+        text-align: justify;
+        font-family: "Nunito", sans-serif;
+      }
+      body {
+        max-width: 80vw;
+        background-color: rgb(157, 238, 181);
+      }
+    </style>
   </head>
   <body>
     <main>
       <nav>
         <ul>
-          <li><a href="/harirayamessage">harirayamessage</a></li>
+          <li><a href="/harirayamessage">harirayamessage [Click Me]</a></li>
         </ul>
       </nav>
+      <img src="hari-raya.jpg" width="320" height="240" />
+      <p>
+        Made with love by NadiahMaher & RubenMaher |
+        <strong>5 June 2019</strong>
+      </p>
     </main>
   </body>
 </html>
